# arquitetura_dw

./: .env-exemple  .gitignore  Dockerfile  README.md  docker-compose.yaml  hello.py  prometheus.yaml  pyproject.toml  requirements.txt
dags/: anatel_broadband_ingestion_dag.py  anatel_export_to_parquet.py  anatel_migration_copy_metod_test.py  teste-dag.py
scripts/ingestion/: data_downloader.py
scripts/preprocessing/: duckdb_preprocessor.py
scripts/sql/: created_table_broadband.sql  created_table_smp.sql
